overflow-x:hidden, fixes #47

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+  /*fixes a random medium screen issue, 
+  investigate further */
+  overflow-x:hidden;
+}
 .smooth {
   transition: width 0.3s;
   white-space: nowrap;
